--- a/app/src/main/res/values-de-rDE/strings.xml
+++ b/app/src/main/res/values-de-rDE/strings.xml
@@ -106,6 +106,7 @@
     <string name="header_model_blue">header_model_blue</string>
     <string name="the_patient_has_been_added">Der Patient wurde hinzugefügt</string>
     <string name="header_model_red">header_model_red</string>
+    <string name="this_is_not_a_medical_product">Dies ist kein Medizinprodukt</string>
     <string name="a_complication_has_been_noted">Eine Komplikation wurde notiert</string>
     <string name="tap_when_the_blue_screen_appears">Tippe wenn der blaue Bildschirm erscheint</string>
 
