add university to patient

--- a/app/src/main/res/values-de-rDE/strings.xml
+++ b/app/src/main/res/values-de-rDE/strings.xml
@@ -172,4 +172,5 @@
     <string name="fortuna_read_game_text">Fortuna Düsseldorf\n\nFortuna Düsseldorf (vollständiger Name: Düsseldorfer Turn- und Sportverein Fortuna 1985 e.V.) ist ein deutscher Sportverein aus Düsseldorf. Nach der Herkunft aus dem früheren Arbeiterviertel Flingern wird gelegentlich die Bezeichnung die Flingeraner benutzt. Der Schwerpunkt des Sportvereins liegt auf dem Fußball, es bestehen aber auch Abteilungen für Handball und Laufsport. Größte Erfolge der Vereinsgeschichte waren der Gewinn der deutschen Fußballmeisterschaft im Jahr 1933, das Erreichen des Finales des Europapokals der Pokalsieger 1979 und zwei DFB-Pokalsiege (1879 und 1980).</string>
     <string name="stimulate">stimulieren</string>
     <string name="complication_note_hint">Beschreibung der Komplikation</string>
+    <string name="university">Universität:</string>
 </resources>
