--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -221,4 +221,5 @@
     <string name="delete_patient">"Delete patient with name: "</string>
     <string name="insert_comment" >Add comment:</string>
     <string name="comment_hint">Your comment</string>
+    <string name="clinical_test">clinical test</string>
 </resources>
